--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 numpy
 pandas
 python-dotenv
-mysql-connector-python
-pymysql
+seaborn
 scikit-learn
+catboost
+xgboost
+Flask
+dill
+mlflow==2.2.2
